<resources>
    <string name="app_name">MailService</string>
    <string name="ws">http://192.168.1.13/mail/</string>
    <string name="login">Iniciar Sesión</string>
    <string name="user">Usuario: </string>
    <string name="email">Correo: </string>
    <string name="pass">Contraseña: </string>
    <string name="register">Registro</string>
    <string name="defPass">************</string>
    <string name="defEmail">root@gmail.com</string>
    <string name="defUser">root</string>

    <string name="hintEmail">correo@gmail.com</string>
    <string name="hintAsunto">Asunto urgentemente importante</string>
    <string name="hintContenido">Escribe tu mensaje</string>

    <string name="txtAsunto">Asunto</string>
    <string name="txtCorreo">Correo</string>
</resources>