<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newMail"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
       >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCorreo"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:textColor="@color/white"
            android:textColorHint="@color/letrasGris"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAsunto"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/txtAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintAsunto"
            android:textColor="@color/white"
            android:textColorHint="@color/letrasGris"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/txtContenido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:background="@color/label"
            android:hint="@string/hintContenido"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/letrasGris"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <Button
                android:id="@+id/btnSendNewMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enviar"
                android:backgroundTint="@color/boton"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>