<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:background="@color/background">
<LinearLayout
    android:id="@+id/contenedorLogin"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="8dp"
    android:background="@color/label">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="12dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresa tu informacion"
        android:textSize="12dp"
        android:padding="8dp"
        />
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/background"
            />
        <EditText
            android:id="@+id/txtUserLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="root"
            android:textSize="15dp"
            android:textColor="@color/background"

            />
    </LinearLayout>
<LinearLayout
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="end"
        android:textColor="@color/background"
        />
    <EditText
        android:id="@+id/txtEmailLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="root@gmail.com"
        android:textSize="15dp"
        android:textColor="@color/background"

        />
</LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/pass"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/background"
            />

        <EditText
            android:id="@+id/txtPassLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="*********"
            android:inputType="textPassword"
            android:textSize="15dp"
            android:textColor="@color/background"

            />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/background"
        android:text="@string/login"
        android:textColor="@color/white"
         />

</LinearLayout>
    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <TextView
            android:id="@+id/btnMoveToRegister"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="¿No tienes cuenta? Crear cuenta"
            android:textColor="@color/letrasGris"
            />
    </LinearLayout>

</LinearLayout>